infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-app
  namespace: default
  labels:
    app: laravel
  annotations:
    # Configuração do ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'

    # Certificado ACM
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:120346103284:certificate/45688a11-8e3c-4862-8599-6df0854030f3

    # Health check
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'

    # Performance
    alb.ingress.kubernetes.io/target-group-attributes: |
      deregistration_delay.timeout_seconds=30,
      stickiness.enabled=true,
      stickiness.lb_cookie.duration_seconds=86400

    # Tags
    alb.ingress.kubernetes.io/tags: Environment=production,Project=laravel-eks

spec:
  ingressClassName: alb
  rules:
  - host: devops.natiwo.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel-app-internal
            port:
              number: 80
